# sandbox

./: .gitignore  Cargo.toml  shell.nix
aoc-2019/: day1.zig  day2.zig  day3.zig  day4.zig  day5.zig
aoc-2020/: d10p1.hs  d10p2.hs  d11p1.hs  d11p2.hs  d12p1.hs  d12p2.hs  d13p1.hs  d14p1.hs  d14p2.hs  d15.hs  d1p1.hs  d1p2.hs  d2p1.hs  d2p2.hs  d3p1.hs  d3p2.hs  d4p1.hs  d4p2.hs  d5p1.hs  d5p2.hs  d6p1.hs  d6p2.hs  d7p1.hs  d7p2.hs  d8p1.hs  d8p2.hs  d9p1.hs  d9p2.hs
compilers/: UntypedLambdaCalc.hs  ulc-program.txt
leetcode/: balance-a-binary-search-tree.cpp  balance-a-binary-search-tree.py  combinations.rs  find-peak-element.rs  is-valid-sudoku.rs  n-queens-2.rs  n-queens.rs  permutations.rs  plus-one.rs  regex-expression-matching.rs  sudoku-board.txt  sudoku-solver.rs  two-sum.rs  valid-number.c  valid-number.rs  wildcard-matching.rs
misc/: poissonDiscSamples.js  regex.lua
