[package]
name = "challenges"
version = "0.1.0"
authors = ["Ryan Johnson <ryanj00a@gmail.com>"]
edition = "2018"

[[bin]]
name = "is-valid-sudoku"
path = "leetcode/is-valid-sudoku.rs"

[[bin]]
name = "sudoku-solver"
path = "leetcode/sudoku-solver.rs"

[[bin]]
name = "regex-expression-matching"
path = "leetcode/regex-expression-matching.rs"

[[bin]]
name = "wildcard-matching"
path = "leetcode/wildcard-matching.rs"