[package]
name = "challenges"
version = "0.1.0"
authors = ["Ryan Johnson <ryanj00a@gmail.com>"]
edition = "2018"

[[bin]]
name = "is-valid-sudoku"
path = "leetcode/is-valid-sudoku.rs"

[[bin]]
name = "sudoku-solver"
path = "leetcode/sudoku-solver.rs"

[[bin]]
name = "regex-expression-matching"
path = "leetcode/regex-expression-matching.rs"

[[bin]]
name = "wildcard-matching"
path = "leetcode/wildcard-matching.rs"

[[bin]]
name = "find-peak-element"
path = "leetcode/find-peak-element.rs"

[[bin]]
name = "n-queens"
path = "leetcode/n-queens.rs"

[[bin]]
name = "n-queens-2"
path = "leetcode/n-queens-2.rs"

[[bin]]
name = "plus-one"
path = "leetcode/plus-one.rs"

[[bin]]
name = "valid-number"
path = "leetcode/valid-number.rs"

[[bin]]
name = "permutations"
path = "leetcode/permutations.rs"

[[bin]]
name = "combinations"
path = "leetcode/combinations.rs"

[[bin]]
name = "two-sum"
path = "leetcode/two-sum.rs"
